# firmware

./: .gitattributes  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
arduino/: Photocell.ino  Thermometer.ino
bluedata/: db.py  main.py
src/: ask.rs  db.rs  main.rs  sensors.rs
