[tool.poetry]
name = "bluedata"
version = "0.1.0"
description = "Firmware for Bluedata"
authors = ["Matt Gleich <git@mattglei.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
